fix carousel of case studies on mobile homepage

--- a/_src/css/layout/_default.scss
+++ b/_src/css/layout/_default.scss
@@ -241,9 +241,8 @@ img.faded {
 .carousel-inner {
   overflow: visible;
 
-  .arrow {
-    position: relative;
-    z-index: 1000;
+  &.mobile-graphics {
+    z-index: 0;
   }
 }
 
